[gd_scene load_steps=16 format=2]

[ext_resource path="res://Actors/Roller.gd" type="Script" id=1]
[ext_resource path="res://Assets/Models/RollerModel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/EndCutscene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/TeleportEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/MagicForceField.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/DustTrack.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sprites/Stars/star_01.png" type="Texture" id=7]

[sub_resource type="CapsuleShape" id=10]
radius = 0.905299
height = 1.09211

[sub_resource type="CylinderShape" id=11]
height = 4.24622
radius = 4.10198

[sub_resource type="CapsuleShape" id=14]
radius = 0.880596

[sub_resource type="Curve" id=34]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.449438, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 34 )

[sub_resource type="ParticlesMaterial" id=35]
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 1.9
emission_ring_height = 0.1
emission_ring_axis = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
radial_accel = -1.0
tangential_accel = 0.5
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=33]
flags_transparent = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 7 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=36]
material = SubResource( 33 )
size = Vector2( 0.5, 0.8 )

[node name="Roller" type="KinematicBody" groups=["networked"]]
collision_layer = 68
collision_mask = 65
axis_lock_motion_y = true
move_lock_y = true
script = ExtResource( 1 )
ACC = 20.0

[node name="Model" type="Spatial" parent="."]

[node name="RollerModel" parent="Model" instance=ExtResource( 2 )]
transform = Transform( 1.32927, 0, 0, 0, 1.32927, 0, 0, 0, 1.32927, 0, 0, 0 )

[node name="BulletSpawn" type="Spatial" parent="Model/RollerModel/Head" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.195769, 0.412361 )

[node name="Handle" type="Spatial" parent="Model/RollerModel"]
transform = Transform( 0.752294, 0, 0, 0, 0.752294, 0, 0, 0, 0.752294, 0, 0.330323, -0.479799 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.841622, 0, 0, 0, -2.82107e-08, 0.645386, 0, -0.841622, -3.67884e-08, 0, 1.23442, 0 )
shape = SubResource( 10 )

[node name="InteractDetection" type="Area" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractDetection"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00012, 0 )
shape = SubResource( 11 )

[node name="Hurtbox" type="Area" parent="."]
visible = false
collision_layer = 48
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Hurtbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.763725, 0 )
shape = SubResource( 14 )

[node name="EndCutscene" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TeleportEffect" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.535135, 0 )

[node name="MagicForceField" parent="." instance=ExtResource( 5 )]
transform = Transform( 1.61904, 0, 0, 0, 1.61904, 0, 0, 0, 1.61904, 0, 1.0463, -0.0589361 )
visible = false

[node name="DustTrack" parent="." instance=ExtResource( 6 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0230429, -0.0807253, -0.762481 )
emitting = false

[node name="TryParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.288404, 0 )
emitting = false
amount = 16
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 35 )
draw_pass_1 = SubResource( 36 )

[editable path="Model/RollerModel"]
